# webrtc-audio-processing-python

./: .gitlab-ci.yml  BUILD_PYTHON.md  NEWS  README.md  meson.build  meson_options.txt  pyproject.toml
examples/: meson.build  run-offline.cpp
patches/: 0001-AECM-MIPS-Use-uintptr_t-for-pointer-arithmetic.patch  0001-Add-support-for-BSD-systems.patch  0001-Allow-disabling-inline-SSE.patch  0001-Fix-up-XMM-intrinsics-usage-on-MSVC.patch  0001-Some-fixes-for-MinGW.patch  0001-arch.h-Add-s390x-support.patch  0001-common_audio-Add-MIPS_DSP_R1_LE-guard-for-vector-sca.patch  0001-meson-Fixes-for-MSVC-build.patch
python/: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py  webrtc_audio_processing.cpp
python/examples/: generate_test_audio.py  offline_processing.py  realtime_echo_cancellation.py  realtime_resampler_sounddevice.py  realtime_rms_sounddevice.py  realtime_vad.py  realtime_vad_sounddevice.py  test_vad.py  vad_example.py
python/webrtc_audio_processing/: __init__.py
scripts/: build_wheel_linux_aarch64.sh  build_wheel_macox_arm64.sh
webrtc/api/: meson.build
webrtc/common_audio/: meson.build
webrtc/common_audio/signal_processing/: vector_scaling_operations_mips.c
webrtc/experiments/: registered_field_trials.h
webrtc/modules/audio_coding/: meson.build
webrtc/modules/audio_processing/: meson.build
webrtc/modules/audio_processing/aec3/: adaptive_fir_filter.cc  adaptive_fir_filter_erl.cc  fft_data.h  matched_filter.cc  multi_channel_content_detector.h  vector_math.h
webrtc/modules/audio_processing/aecm/: aecm_core_mips.cc
webrtc/modules/audio_processing/agc2/rnn_vad/: vector_math.h
webrtc/rtc_base/: logging.cc  meson.build  platform_thread_types.cc  trace_event.h
webrtc/rtc_base/system/: arch.h  file_wrapper.cc
